--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -25,6 +25,7 @@
     border: 1px solid $border-color;
     background: #f8f9fa;
     border-top: none;
+    position: relative;
   }
   .row-data{
   display: flex;
@@ -41,6 +42,7 @@
     border-top: none;
     border-left: none;
     height: 100%;
+    position: relative;
   }
   .cell{
     min-width: 40px;
@@ -56,8 +58,35 @@
 
   &.selected{
     border: none;
-    outline: 2px solid #3c74ff;
+    outline: 2px solid $primary-color;
     z-index: 2;
   }
+  }
+
+  .col-resize, .row-resize{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    opacity: 0;
+    background: $primary-color;
+    z-index: 10000;
+    &:hover{
+      opacity: initial !important;
+
+    }
+  }
+  .col-resize{
+    top: 0;
+    width: 4px;
+    &:hover{
+      cursor: col-resize;
+    }
+  }
+  .row-resize{
+    left: 0;
+    height: 4px;
+    &:hover{
+      cursor: row-resize;
+    }
   }
 }
